# mhs_python_hw

./: .gitignore  Makefile  README.md  pyproject.toml
hw_1/: demo.sh  nl.py  tail.py  wc.py
hw_1/artifacts/: nl_output_file  nl_output_stdin  nl_source  tail_output_multiple_files  tail_output_one_file  tail_output_stdin  wc_multiple_file  wc_single_file  wc_stdin
hw_2/: Dockerfile  Makefile  demo.sh
hw_2/artifacts/: input.tex
hw_2/demo/: __main__.py
hw_2/latex_lib/: __init__.py
hw_3/: cache.py  demo.sh  matrix.py  mixins.py  np_matrix.py
hw_3/artifacts/1/: a.txt  b.txt  matrix*.txt  matrix+.txt  matrix@.txt  out
hw_3/artifacts/2/: a.txt  b.txt  matrix*.txt  matrix+.txt  matrix@.txt  out
hw_3/artifacts/3/: AB_CACHED.txt  CD.txt  hash.txt  out
hw_4/: compare_fib.py  compare_integrate.py  demo.sh  ipc.py
hw_4/artifacts/: ipc.out
